2004-05-31  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filetreeprivate.{cc,h} (FileTreeColumns::instance): New
	static method which replaces the filetree_columns() function,
	for consistency with RegexxerTags::instance().
	(filetree_columns): Remove.

	* src/filetree.cc: Replace all instances of filetree_columns()
	with FileTreeColumns::instance().

2004-05-31  Daniel Elstner  <daniel.elstner@gmx.net>

	* ui/aboutdialog.glade (label_url): Get rid of the prefixed U+202D
	LEFT-TO-RIGHT OVERRIDE since Pango gets that right on its own now.
	(label_author_who): ditto

	* ui/mainwindow.glade (button_multiple): ditto
	(button_caseless): ditto.

2004-05-31  Daniel Elstner  <daniel.elstner@gmx.net>

	* ui/mainwindow.glade (button_multiple): Set to active by default.

2004-05-31  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/statusline.cc (StatusLine::set_file_encoding): Work around
	the GTK+ bug with right-aligned labels by calling check_resize(),
	just as already done in CounterBox::set_index().  Note that the
	status bar is right-aligned only in RTL locales.

2004-05-31  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/aboutdialog.cc (AboutDialog::create): If no translation is
	available for the current locale, replace "translator-credits" by
	some more user-friendly text.

2004-05-30  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/filetree.cc (FileTree::color_modified_): Use "Accent Red"
	from the basic GNOME 32-color palette instead of rgb.txt "red".

	(FileTree::text_cell_data_func): Set the text style to "oblique"
	in addition to painting in red color if the file was modified.

2004-05-30  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/pcreshell.cc (Pattern::get_substring_bounds): Sanity-check
	for index >= 0 too.

2004-05-30  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/mainwindow.cc (MainWindow::on_conf_value_changed): Remove
	"using namespace Gtk" directive which became pointless after the
	last change.
